syntax = "proto3";

option csharp_namespace = "WallTec.CoreCom.Proto";

package CoreCom;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CoreCom {
	
	rpc ClientConnectToServer(ConnectToServerRequest) returns (ConnectToServerResponse);
	//Public functions needs no token

	rpc SubscribeServerToClient(CoreComMessage) returns (stream CoreComMessage);
	//Authenticated functions

	rpc SubscribeServerToClientAuth(CoreComMessage) returns (stream CoreComMessage);
	//rpc ClientToServerCoreComMessage(CoreComMessage) returns (CoreComMessageResponse);
}
message ConnectToServerRequest {
	string ClientId = 1;
	
}
message ConnectToServerResponse {
	string Response = 1;
	google.protobuf.Timestamp ServerDateTime = 2;
	
}

message CoreComMessage {
	string  CoreComMessageId=1;
	string ClientId = 2;
	string MessageSignature = 3;
	string JsonObjectType =4;
	string JsonObject =5;
	int32 TransferStatus=6;	
}